...
        <scene sceneID="qEv-Lj-aUz">
            <objects>
                <viewController id="B0i-j1-20y" customClass="AboutViewController" customModule="CareTaker3" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="pUE-wb-d7N">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
...
                                <rect key="frame" x="123" y="37" width="149" height="36"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="appNameLabel"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="test" imagePadding="5">
                                    <imageReference key="image" image="square.and.arrow.down.on.square" catalog="system" symbolScale="small"/>
                                </buttonConfiguration>
...
                                        <label opaque="NO" userInteractionEnabled="NO" tag="66001" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="カテゴリーの名前" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UzX-EM-etU">
                                            <rect key="frame" x="0.0" y="19" width="414" height="30"/>
                                            <accessibility key="accessibilityConfiguration" identifier="categoryName"/>
                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                            <color key="textColor" red="0.36237980769230771" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                    <navigationItem key="navigationItem" title="CareTaker3" id="2D2-1x-r3H">
                        <leftBarButtonItems>
                            <barButtonItem title="Item" image="questionmark.circle" catalog="system" id="UNk-dL-7A7">
                                <color key="tintColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <connections>
...
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="About" image="app" catalog="system" id="c0m-7X-67t">
                                <color key="tintColor" red="0.0" green="1" blue="1" alpha="0.41252125850340138" colorSpace="custom" customColorSpace="sRGB"/>
                                <connections>
...
                        </leftBarButtonItems>
                        <rightBarButtonItems>
                            <barButtonItem title="Edit" id="cvb-6x-jQp">
                                <color key="tintColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <connections>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="期限-日前のアクション一覧" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wry-Ie-Nz1">
                                <rect key="frame" x="20" y="88" width="378" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="locationDueLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
                            <slider opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="bry-5r-aMY">
                                <rect key="frame" x="18" y="146" width="378" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="dueIntervalSlider">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
...
                                                <rect key="frame" x="51" y="27" width="56" height="21"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <accessibility key="accessibilityConfiguration" identifier="labelInterval"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="calendar.badge.clock" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="HmK-6b-CFF">
                                                <rect key="frame" x="20" y="28.5" width="21" height="20"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                <color key="tintColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                            </imageView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zuu-7f-0ap">
                                                <rect key="frame" x="51" y="445" width="66" height="21"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <color key="backgroundColor" red="0.13501159162118459" green="0.13501159162118459" blue="0.13501159162118459" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <accessibility key="accessibilityConfiguration" identifier="textIntervalDays"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                <rect key="frame" x="341" y="441" width="49" height="31"/>
