...
    override func viewDidLoad() {
        super.viewDidLoad()
        
        activeModelSortedKeys = contentsList.keys.map{ Int($0) }
        activeModelSortedKeys.sort()
        
        title = "Your Choice"
        navigationItem.rightBarButtonItem = UIBarButtonItem(
            image: UIImage(systemName: "xmark.circle.fill"),
            style: .plain,
            target: self,
            action: #selector(didTapDoneButton(_:)))
        navigationItem.rightBarButtonItem?.tintColor = .systemGray
...
