...
    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "表示項目選択"
        tableView.register(UITableViewCell.self, forCellReuseIdentifier: "detailTableCell")
    }
}

extension DetailSettingViewController {
    override func tableView(_ tableView: UITableView, numberOfRowsInSection section: Int) -> Int {
...
